apps/monitoring/redirect-middleware-monitoring.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
