apps/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-https@kubernetescrd,authelia-authelia@kubernetescrd
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - prometheus.home
    secretName: prometheus-tls
  rules:
  - host: prometheus.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-stack-kube-prom-prometheus
            port:
              number: 9090
